deploy: 1ca93187743ad140c601ef0002f51a4c03ca30b1

--- a/S1_69.html
+++ b/S1_69.html
@@ -786,33 +786,30 @@
       </div>
       <footer  class="footer">
          <div class="container-fluid" id="footer-full-content" tabindex="-1 overflow-hidden">
-            <div class="footer-separator justify-content-center overflow-hidden">
-               <h5 class="font-weight-bold">KONTAKT</h5>
-            </div>
             <div class="row justify-content-center overflow-hidden">
+               <div class="footer-widget col-lg-1 col-md-2 col-sm-2 col-xs-6 text-right overflow-hidden">
+                  <h5 class="font-weight-bold">KONTAKT</h5>
+               </div>
                <div class="footer-widget col-lg-1 col-md-2 col-sm-2 col-xs-6 text-center overflow-hidden">
                   <div class="textwidget custom-html-widget"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image" alt="ACDH Logo" style="max-width: 90%; height: auto;" title="ACDH Logo"></a></div>
                </div>
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
-                  <div class="textwidget custom-html-widget overflow-hidden">
-                     <h6 class="font-weight-bold">ACDH-CH</h6>
-                     <p>Austrian Centre for Digital Humanities <br/> and Cultural Heritage
-                        <br/> Österreichische Akademie der Wissenschaften </p>
-                     <p> Bäckerstraße 13 <br/> 1010 Wien </p>
-                     <p> T: +43 1 51581-2200 <br/> E: <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
+                  <div class="textwidget custom-html-widget overflow-hidden"><b>ACDH-CH</b><p><b>Austrian Centre for Digital Humanities and Cultural Heritage</b><br/> Österreichische Akademie der Wissenschaften
+                        <br/>Bäckerstraße 13 <br/> 1010 Wien
+                        <br/>T: +43 1 51581-2200 <br/> E: <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
                   </div>
                </div>
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
                   <div class="row">
-                     <div class="textwidget custom-html-widget overflow-hidden">
-                        <h6 class="font-weight-bold">HELPDESK</h6>
-                        <p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie
+                     <div class="textwidget custom-html-widget overflow-hidden"><b>HELPDESK</b><p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie
                            sich bitte an den ACDH-CH Helpdesk.</p>
                         <p><a class="helpdesk-button" href="mailto:acdh-ch-helpdesk@oeaw.ac.at">e-Mail</a></p>
                      </div>
                   </div>
                </div>
-               <div class="float-right"><a href="https://github.com/ofmgraz/ofm-static"><i class="bi bi-github"></i></a></div>
+               <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
+                  <div class="float-right"><a href="https://github.com/ofmgraz/ofm-static"><i class="bi bi-github"></i></a></div>
+               </div>
             </div>
          </div>
       </footer>
