--- a/S1_62.html
+++ b/S1_62.html
@@ -378,7 +378,7 @@
                   </div>
                </div>
                <div class="footer-widget col-lg-1 col-md-4 col-sm-3 overflow-hidden">
-                  <div class="float-right"><a href="https://github.com/ofmgraz/ofm-static"><i class="bi bi-github"></i></a></div>
+                  <div class="float-right github"><a href="https://github.com/ofmgraz/ofm-static"><i class="bi bi-github"></i></a></div>
                </div>
             </div>
          </div>
