--- a/S1_65.html
+++ b/S1_65.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="S 1/65">
+      <meta  name="apple-mobile-web-app-title" content="Ad te levavi animam meam">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >S 1/65</title>
+      <title >Ad te levavi animam meam</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -106,7 +106,7 @@
                      <h1><a href="S1_66.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
-                     <h1 align="center">S 1/65</h1>
+                     <h1 align="center">Ad te levavi animam meam</h1>
                      <h3 align="center"><a href="S1_65.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                      <p class="document_info archival_small" align="center"></p>
                      <p class="document_info archival_small" align="center"> (print )</p>
