--- a/S1_70.html
+++ b/S1_70.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti">
+      <meta  name="apple-mobile-web-app-title" content="Hymnarium sacrum">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</title>
+      <title >Hymnarium sacrum</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -106,7 +106,7 @@
                      <h1><a href="A67_19.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
-                     <h1 align="center">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</h1>
+                     <h1 align="center">Hymnarium sacrum</h1>
                      <h3 align="center"><a href="S1_70.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                      <p class="document_info archival_small" align="center"></p>
                      <p class="document_info archival_small" align="center"> (print )</p>
@@ -125,7 +125,7 @@
                   </div>
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index">
                      <div id="section">
-                        <div class="card-body non_mimetic_lbs"><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_70/files/images/A-Gf_S1_70-000/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_70/files/images/A-Gf_S1_70-000/full/full/0/default.jpg" n="2" style="--page_before: '1'; --beginning_page: '2';"></span><span class="pb_marker" n="2"></span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_70/files/images/A-Gf_S1_70-001/full/full/0/default.jpg" n="3" style="--page_before: '2'; --beginning_page: '3';"></span><span class="pb_marker" n="3"></span><p class="yes-index"></p>
+                        <div class="card-body non_mimetic_lbs"><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_70/files/images/A-Gf_S1_70-000r/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_70/files/images/A-Gf_S1_70-000v/full/full/0/default.jpg" n="2" style="--page_before: '1'; --beginning_page: '2';"></span><span class="pb_marker" n="2"></span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_70/files/images/A-Gf_S1_70-001/full/full/0/default.jpg" n="3" style="--page_before: '2'; --beginning_page: '3';"></span><span class="pb_marker" n="3"></span><p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
