deploy: 1acd517fd6bba7c5c788fd31c5706c4a24a1926e

--- a/toc.html
+++ b/toc.html
@@ -1357,8 +1357,8 @@
                   </tr>
                </tbody>
             </table>
-            <h4>Tabelle herunterladen</h4>
-            <div class="button-group"><button type="button" class="btn btn-outline-secondary" id="download-csv" title="Als CSV exportieren"><i class="bi bi-filetype-csv"></i><span class="visually-hidden">Als CSV exportieren</span></button><button type="button" class="btn btn-outline-secondary" id="download-json" title="Als JSON exportieren"><i class="bi bi-filetype-json"></i><span class="visually-hidden">Als JSON exportieren</span></button><button type="button" class="btn btn-outline-secondary" id="download-html" title="Als HTML exportieren"><i class="bi bi-filetype-html"></i><span class="visually-hidden">Als HTML exportieren</span></button></div>
+            <h4>Download Table</h4>
+            <div class="button-group"><button type="button" class="btn btn-outline-secondary" id="download-csv" title="Download CSV"><i class="bi bi-filetype-csv"></i><span class="visually-hidden">Download CSV</span></button><button type="button" class="btn btn-outline-secondary" id="download-json" title="Download JSON"><i class="bi bi-filetype-json"></i><span class="visually-hidden">Download JSON</span></button><button type="button" class="btn btn-outline-secondary" id="download-html" title="Download HTML"><i class="bi bi-filetype-html"></i><span class="visually-hidden">Download HTML</span></button></div>
          </div>
       </main>
       <link href="https://unpkg.com/tabulator-tables@5.6.0/dist/css/tabulator.min.css" rel="stylesheet">
