deploy: cc98b8c4df05c8239e8bcc4021da8ca95fdd4814

--- a/toc.html
+++ b/toc.html
@@ -67,12 +67,12 @@
             <table class="table" id="myTable">
                <thead>
                   <tr>
-                     <th scope="col" tabulator-formatter="html" tabulator-responsive="0" tabulator-resizable="true" tabulator-headerFilter="input">Titel</th>
+                     <th scope="col" tabulator-formatter="html" tabulator-responsive="0" tabulator-resizable="true" tabulator-headerFilter="input" tabulator-minWidth="300px">Titel</th>
                      <th scope="col" tabulator-formatter="html" tabulator-visible="false">XML-TEI</th>
-                     <th scope="col" tabulator-headerFilter="input" tabulator-responsive="1">TPQ</th>
+                     <th scope="col" tabulator-headerFilter="input" tabulator-responsive="1" tabulator-minWidth="150px">TPQ</th>
                      <th scope="col" tabulator-visible="false">TAQ</th>
-                     <th scope="col" tabulator-responsive="2" tabulator-headerFilter="input">Liturgie</th>
-                     <th scope="col" tabulator-responsive="3" tabulator-headerFilter="input">Dokumententyp</th>
+                     <th scope="col" tabulator-responsive="2" tabulator-headerFilter="input" tabulator-minWidth="150px">Liturgie</th>
+                     <th scope="col" tabulator-responsive="3" tabulator-headerFilter="input" tabulator-minWidth="150px">Dokumententyp</th>
                      <th scope="col" tabulator-formatter="html" tabulator-visible="false">Provenienz</th>
                      <th scope="col" tabulator-formatter="html" tabulator-visible="false">Drucker</th>
                      <th scope="col" tabulator-visible="false">Folia</th>
