deploy: 21b291bcf6a0daeabe6caa872729bce328572594

--- a/S1_28.html
+++ b/S1_28.html
@@ -81,12 +81,8 @@
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
-                  <div id="seadragon-viewer" style="width:800px; height:600px;"></div>
-                  <div id="img-resize" class="col-md-6 col-lg-6 col-sm-12 facsimiles">
-                     <div id="viewer">
-                        <div id="container_facs_1"></div>
-                     </div>
-                  </div>
+                  <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere"></div>
+                  <div id="seadragon-viewer"></div>
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere">
                      <div id="section">
                         <div class="card-body non_mimetic_lbs"><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_28/files/images/A-Gf_S1_28-001r/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span><p class="yes-index"></p>
