deploy: dc0885beaf1497a39724a9e56e98e1e8274bae02

--- a/S1_74.html
+++ b/S1_74.html
@@ -78,7 +78,9 @@
                </div>
                <div id="container-resize" class="row transcript active">
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere"></div>
-                  <div id="seadragon-viewer"></div>
+                  <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index">
+                     <div id="seadragon-viewer"></div>
+                  </div>
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere">
                      <div id="section">
                         <div class="card-body non_mimetic_lbs"><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_74/files/images/A-Gf_S1_74-001/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_74/files/images/A-Gf_S1_74-002/full/full/0/default.jpg" n="2" style="--page_before: '1'; --beginning_page: '2';"></span><span class="pb_marker" n="2"></span><p class="yes-index"></p>
