--- a/A64_40.html
+++ b/A64_40.html
@@ -78,7 +78,9 @@
                </div>
                <div id="container-resize" class="row transcript active">
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere"></div>
-                  <div id="seadragon-viewer"></div>
+                  <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index">
+                     <div id="seadragon-viewer"></div>
+                  </div>
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere">
                      <div id="section">
                         <div class="card-body non_mimetic_lbs"><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A64_40/files/images/A-Gf_A64_40-001r/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span><p class="yes-index"></p>
