--- a/S1_40a.html
+++ b/S1_40a.html
@@ -76,7 +76,7 @@
                </div>
                <div id="container-resize" class="row transcript active">
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere"></div>
-                  <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index">
+                  <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 facsimiles yes-index">
                      <div id="seadragon-viewer"></div>
                   </div>
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere">
