--- a/listperson.html
+++ b/listperson.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Drucker">
+      <meta  name="apple-mobile-web-app-title" content="">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Drucker</title>
+      <title ></title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -63,7 +63,7 @@
       </div>
       <main class="flex-grow-1">
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Drucker</h1>
+            <h1 class="text-center pb-4 pt-3"></h1>
             <table class="table" id="myTable">
                <thead>
                   <tr>
@@ -72,33 +72,7 @@
                      <th scope="col" tabulator-visible="false">ID</th>
                   </tr>
                </thead>
-               <tbody>
-                  <tr>
-                     <td><a href="Voigt.html">Leopold Voigt</a></td>
-                     <td><a href="Wien.html" target="_blank">Wien</a></td>
-                     <td>Voigt</td>
-                  </tr>
-                  <tr>
-                     <td><a href="Mayr.html">Johann Baptist Mayr</a></td>
-                     <td><a href="Salzburg.html" target="_blank">Salzburg</a></td>
-                     <td>Mayr</td>
-                  </tr>
-                  <tr>
-                     <td><a href="Pezzana.html">Giovanni Antonio Pezzana</a></td>
-                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
-                     <td>Pezzana</td>
-                  </tr>
-                  <tr>
-                     <td><a href="Balleoni.html">Paolo Baglioni</a></td>
-                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
-                     <td>Balleoni</td>
-                  </tr>
-                  <tr>
-                     <td><a href="Ciera.html">Pietro Ciera</a></td>
-                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
-                     <td>Ciera</td>
-                  </tr>
-               </tbody>
+               <tbody></tbody>
             </table>
             <h4>Tabelle herunterladen</h4>
             <div class="button-group"><button type="button" class="btn btn-outline-secondary" id="download-csv" title="Als CSV exportieren"><i class="bi bi-filetype-csv"></i><span class="visually-hidden">Als CSV exportieren</span></button><button type="button" class="btn btn-outline-secondary" id="download-json" title="Als JSON exportieren"><i class="bi bi-filetype-json"></i><span class="visually-hidden">Als JSON exportieren</span></button><button type="button" class="btn btn-outline-secondary" id="download-html" title="Als HTML exportieren"><i class="bi bi-filetype-html"></i><span class="visually-hidden">Als HTML exportieren</span></button></div>
