--- a/Ciera.html
+++ b/Ciera.html
@@ -64,14 +64,49 @@
       <main class="flex-grow-1">
          <div class="container">
             <h1 class="text-center pb-4 pt-3">Pietro Ciera</h1>
-            <div class="card-body"><small>Geburtsdatum: </small>1650<br/><small>Todesdatum: </small>1706<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1051039606" target="_blank">1051039606</a><br/><hr>
-               <div id="mentions" align="left">
-                  <legend>Verantwortlich für:</legend>
-                  <ul>
-                     <li><a href="S1_66.html">S 1/66</a></li>
-                  </ul>
-               </div>
-            </div>
+            <table class="table entity-table">
+               <tbody>
+                  <tr>
+                     <th>
+                        Geburtsjahr
+                        </th>
+                     <td>1650</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Sterbejahr
+                        </th>
+                     <td>1706</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Aktiv in:
+                        </th>
+                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Authority
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="https://d-nb.info/gnd/1051039606">GND</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Verantwortlich für:
+                        
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_66.html">S 1/66</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
          </div>
       </main>
       <footer  class="footer">
