--- a/Mayr.html
+++ b/Mayr.html
@@ -64,22 +64,57 @@
       <main class="flex-grow-1">
          <div class="container">
             <h1 class="text-center pb-4 pt-3">Johann Baptist Mayr</h1>
-            <div class="card-body"><small>Geburtsdatum: </small>1634<br/><small>Todesdatum: </small>1708<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Salzburg.html" target="_blank">Salzburg</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/124751946" target="_blank">124751946</a><br/><hr>
-               <div id="mentions" align="left">
-                  <legend>Verantwortlich für:</legend>
-                  <ul>
-                     <li><a href="S1_62.html">Hymnarium Sacrum tam Romanum Urbani Papae VIII
-                           recognitum</a></li>
-                     <li><a href="S1_72.html">S 1/72</a></li>
-                     <li><a href="S1_61.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
-                           recogniti</a></li>
-                     <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
-                           recogniti</a></li>
-                     <li><a href="S1_70.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
-                           recogniti</a></li>
-                  </ul>
-               </div>
-            </div>
+            <table class="table entity-table">
+               <tbody>
+                  <tr>
+                     <th>
+                        Geburtsjahr
+                        </th>
+                     <td>1634</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Sterbejahr
+                        </th>
+                     <td>1708</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Aktiv in:
+                        </th>
+                     <td><a href="Salzburg.html" target="_blank">Salzburg</a></td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Authority
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="https://d-nb.info/gnd/124751946">GND</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Verantwortlich für:
+                        
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_62.html">Hymnarium Sacrum tam Romanum Urbani Papae VIII
+                                 recognitum</a></li>
+                           <li><a href="S1_72.html">S 1/72</a></li>
+                           <li><a href="S1_61.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
+                                 recogniti</a></li>
+                           <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
+                                 recogniti</a></li>
+                           <li><a href="S1_70.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
+                                 recogniti</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
          </div>
       </main>
       <footer  class="footer">
