--- a/Balleoni.html
+++ b/Balleoni.html
@@ -64,16 +64,52 @@
       <main class="flex-grow-1">
          <div class="container">
             <h1 class="text-center pb-4 pt-3">Paolo Baglioni</h1>
-            <div class="card-body"><small>Geburtsdatum: </small>1632<br/><small>Todesdatum: </small>1721<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1037524810" target="_blank">1037524810</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q112399622" target="_blank">Q112399622</a><br/><hr>
-               <div id="mentions" align="left">
-                  <legend>Verantwortlich für:</legend>
-                  <ul>
-                     <li><a href="S1_65.html">S 1/65</a></li>
-                     <li><a href="S1_67.html">Antiphonarium de Sanctis Ordinis Minorum</a></li>
-                     <li><a href="S1_68.html">S 1/68</a></li>
-                  </ul>
-               </div>
-            </div>
+            <table class="table entity-table">
+               <tbody>
+                  <tr>
+                     <th>
+                        Geburtsjahr
+                        </th>
+                     <td>1632</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Sterbejahr
+                        </th>
+                     <td>1721</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Aktiv in:
+                        </th>
+                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Authority
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="https://d-nb.info/gnd/1037524810">GND</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q112399622">WIKIDATA</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Verantwortlich für:
+                        
+                        </th>
+                     <td>
+                        <ul>
+                           <li><a href="S1_65.html">S 1/65</a></li>
+                           <li><a href="S1_67.html">Antiphonarium de Sanctis Ordinis Minorum</a></li>
+                           <li><a href="S1_68.html">S 1/68</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
          </div>
       </main>
       <footer  class="footer">
