deploy: 9c74ea498fcabbfb702fb39d2a47f7292f2bddf5

--- a/Voigt.html
+++ b/Voigt.html
@@ -64,53 +64,17 @@
       <main class="flex-grow-1">
          <div class="container">
             <h1 class="text-center pb-4 pt-3">Leopold Voigt</h1>
-            <table class="table entity-table">
-               <tbody>
-                  <tr>
-                     <th>
-                        Geburtsjahr
-                        </th>
-                     <td>1650</td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Sterbejahr
-                        </th>
-                     <td>1706</td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Aktiv in:
-                        </th>
-                     <td><a href="Wien.html" target="_blank">Wien</a></td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Authority
-                        </th>
-                     <td>
-                        <ul>
-                           <li><a href="https://d-nb.info/gnd/1037512057">GND</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q56118770">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Verantwortlich für:
-                        
-                        </th>
-                     <td>
-                        <ul>
-                           <li><a href="S1_74.html">Ordo agendorum et cantandorum in actibus
-                                 processionalibus</a></li>
-                           <li><a href="S1_75.html">Ordo agendorum et cantandorum in actibus
-                                 processionalibus</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-               </tbody>
-            </table>
+            <div class="card-body"><small>Geburtsdatum: </small>1650<br/><small>Todesdatum: </small>1706<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Wien.html" target="_blank">Wien</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1037512057" target="_blank">1037512057</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q56118770" target="_blank">Q56118770</a><br/><hr>
+               <div id="mentions" align="left">
+                  <legend>Verantwortlich für:</legend>
+                  <ul>
+                     <li><a href="S1_74.html">Ordo agendorum et cantandorum in actibus
+                           processionalibus</a></li>
+                     <li><a href="S1_75.html">Ordo agendorum et cantandorum in actibus
+                           processionalibus</a></li>
+                  </ul>
+               </div>
+            </div>
          </div>
       </main>
       <footer  class="footer">
