--- a/Pezzana.html
+++ b/Pezzana.html
@@ -64,52 +64,16 @@
       <main class="flex-grow-1">
          <div class="container">
             <h1 class="text-center pb-4 pt-3">Giovanni Antonio Pezzana</h1>
-            <table class="table entity-table">
-               <tbody>
-                  <tr>
-                     <th>
-                        Geburtsjahr
-                        </th>
-                     <td>1717</td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Sterbejahr
-                        </th>
-                     <td>1779</td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Aktiv in:
-                        </th>
-                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Authority
-                        </th>
-                     <td>
-                        <ul>
-                           <li><a href="https://d-nb.info/gnd/1102696757">GND</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q105889193">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Verantwortlich für:
-                        
-                        </th>
-                     <td>
-                        <ul>
-                           <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris
-                                 Francisci</a></li>
-                           <li><a href="S1_64.html">Psalterium Romanum dispositum per Hebdomadam</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-               </tbody>
-            </table>
+            <div class="card-body"><small>Geburtsdatum: </small>1717<br/><small>Todesdatum: </small>1779<br/><small>Tätigkeit: </small>Drucker<br/><small>Aktiv in: </small><a href="Venedig.html" target="_blank">Venedig</a><br/><small>GND ID: </small><a href="https://d-nb.info/gnd/1102696757" target="_blank">1102696757</a><br/><small>Wikidata ID: </small><a href="https://www.wikidata.org/entity/Q105889193" target="_blank">Q105889193</a><br/><hr>
+               <div id="mentions" align="left">
+                  <legend>Verantwortlich für:</legend>
+                  <ul>
+                     <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris
+                           Francisci</a></li>
+                     <li><a href="S1_64.html">Psalterium Romanum dispositum per Hebdomadam</a></li>
+                  </ul>
+               </div>
+            </div>
          </div>
       </main>
       <footer  class="footer">
