deploy: ac27da92a9e89faad3ee12c88b154dabdddec057

--- a/toc.html
+++ b/toc.html
@@ -391,6 +391,50 @@
                      <td>In progress</td>
                   </tr>
                   <tr>
+                     <td><a href="Antiphonar-Winterteil%20f%C3%BCr%20den%20Gebrauch%20der%20Augustinerchorherren%20von%20Klosterneuburg%20-%20A-KN%2065_duplicated.html">S 1/19 (Tota pulchra)</a></td>
+                     <td><a href="Antiphonar-Winterteil%20f%C3%BCr%20den%20Gebrauch%20der%20Augustinerchorherren%20von%20Klosterneuburg%20-%20A-KN%2065_duplicated.xml">Antiphonar-Winterteil%20für%20den%20Gebrauch%20der%20Augustinerchorherren%20von%20Klosterneuburg%20-%20A-KN%2065_duplicated.xml</a></td>
+                     <td>1710</td>
+                     <td>1710</td>
+                     <td>
+                        OFM
+                        </td>
+                     <td>
+                        Gesänge
+                        </td>
+                     <td><a href="Graz.html">Graz</a></td>
+                     <td>[Handschrift]</td>
+                     <td>114</td>
+                     <td>340</td>
+                     <td>230</td>
+                     <td>
+                        Tota pulchra, Lauretanische Litaneien, choraliter / figuraliter, mensuriert
+                        Marianische Gesänge
+                        </td>
+                     <td>In progress</td>
+                  </tr>
+                  <tr>
+                     <td><a href="Graduale%20f%C3%BCr%20den%20Gebrauch%20in%20der%20Di%C3%B6zese%20Passau%20-%20A-Geras%206_duplicated.html">S 1/19 (Tota pulchra)</a></td>
+                     <td><a href="Graduale%20f%C3%BCr%20den%20Gebrauch%20in%20der%20Di%C3%B6zese%20Passau%20-%20A-Geras%206_duplicated.xml">Graduale%20für%20den%20Gebrauch%20in%20der%20Diözese%20Passau%20-%20A-Geras%206_duplicated.xml</a></td>
+                     <td>1710</td>
+                     <td>1710</td>
+                     <td>
+                        OFM
+                        </td>
+                     <td>
+                        Gesänge
+                        </td>
+                     <td><a href="Graz.html">Graz</a></td>
+                     <td>[Handschrift]</td>
+                     <td>114</td>
+                     <td>340</td>
+                     <td>230</td>
+                     <td>
+                        Tota pulchra, Lauretanische Litaneien, choraliter / figuraliter, mensuriert
+                        Marianische Gesänge
+                        </td>
+                     <td>In progress</td>
+                  </tr>
+                  <tr>
                      <td><a href="A67_19.html">A 67/19 (Asperges me Domine)</a></td>
                      <td><a href="A67_19.xml">A67_19.xml</a></td>
                      <td>1450</td>
@@ -417,6 +461,28 @@
                   <tr>
                      <td><a href="A67_43.html">A 67/43 (Christus dominus secundum ordinem Melchisedech)</a></td>
                      <td><a href="A67_43.xml">A67_43.xml</a></td>
+                     <td>1636</td>
+                     <td>1636</td>
+                     <td>
+                        OFM
+                        </td>
+                     <td>
+                        Responsoriale
+                        </td>
+                     <td><a href="Graz.html">Graz</a></td>
+                     <td>[Handschrift]</td>
+                     <td>209</td>
+                     <td>210</td>
+                     <td>140</td>
+                     <td>
+                        Ab Fronleichnam
+                        Responsoriale
+                        </td>
+                     <td>In progress</td>
+                  </tr>
+                  <tr>
+                     <td><a href="Graduale%20Vorau%20(OSA)%20-%20A-VOR%20254_duplicated.html">A 67/43 (Christus dominus secundum ordinem Melchisedech)</a></td>
+                     <td><a href="Graduale%20Vorau%20(OSA)%20-%20A-VOR%20254_duplicated.xml">Graduale%20Vorau%20(OSA)%20-%20A-VOR%20254_duplicated.xml</a></td>
                      <td>1636</td>
                      <td>1636</td>
                      <td>
@@ -833,6 +899,28 @@
                   <tr>
                      <td><a href="S1_40.html">S 1/40 (O admirabile commercium)</a></td>
                      <td><a href="S1_40.xml">S1_40.xml</a></td>
+                     <td>1700</td>
+                     <td>1799</td>
+                     <td>
+                        OFM
+                        </td>
+                     <td>
+                        Intonationsbuch
+                        </td>
+                     <td><a href="MariaLankowitz.html">Maria Lankowitz</a></td>
+                     <td>[Handschrift]</td>
+                     <td>18</td>
+                     <td>175</td>
+                     <td>120</td>
+                     <td>
+                        Intonationen für Vespern
+                        Intonationsbuch für Zelebranten
+                        </td>
+                     <td>In progress</td>
+                  </tr>
+                  <tr>
+                     <td><a href="TRAINING_VALIDATION_SET_Chorbuch-6.html">S 1/40 (O admirabile commercium)</a></td>
+                     <td><a href="TRAINING_VALIDATION_SET_Chorbuch-6.xml">TRAINING_VALIDATION_SET_Chorbuch-6.xml</a></td>
                      <td>1700</td>
                      <td>1799</td>
                      <td>
