--- a/A67_41.html
+++ b/A67_41.html
@@ -66,7 +66,7 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="S1_40.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="TRAINING_VALIDATION_SET_Chorbuch-6.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">A 67/41 (Das 4. Respons Buch)</h1>
@@ -83,21 +83,21 @@
                   </div>
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere">
                      <div id="section">
-                        <div class="card-body non_mimetic_lbs"><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_41/files/images/A-Gf_A67_41-000v/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_41/files/images/A-Gf_A67_41-001r/full/full/0/default.jpg" n="2" style="--page_before: '1'; --beginning_page: '2';"></span><span class="pb_marker" n="2"></span><p class="yes-index"><span class="notation" id="d34t4725">c4 l1,l2 z2 l2, l2, L , z2, l2 l1 cu_l2</span><br/></p>
+                        <div class="card-body non_mimetic_lbs"><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_41/files/images/A-Gf_A67_41-000v/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_41/files/images/A-Gf_A67_41-001r/full/full/0/default.jpg" n="2" style="--page_before: '1'; --beginning_page: '2';"></span><span class="pb_marker" n="2"></span><p class="yes-index"><span class="notation" id="d35t4725">c4 l1,l2 z2 l2, l2, L , z2, l2 l1 cu_l2</span><br/></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
-                           <p class="yes-index"><span class="notation" id="d34t4741">c4 l2 : z3 z2, l3 z3 z2 z2 l2 cu_l2</span><br/></p>
+                           <p class="yes-index"><span class="notation" id="d35t4741">c4 l2 : z3 z2, l3 z3 z2 z2 l2 cu_l2</span><br/></p>
                            <p class="yes-index"></p>
-                           <p class="yes-index"><span class="notation" id="d34t4751">c4 LL z2 l2 z3 l3, l2 z1 l1, z2 z1 l3 z2 l3, z2 l2 : LL l3 l2, l4 LL</span><br/></p>
-                           <p class="yes-index"></p>
-                           <p class="yes-index"></p>
+                           <p class="yes-index"><span class="notation" id="d35t4751">c4 LL z2 l2 z3 l3, l2 z1 l1, z2 z1 l3 z2 l3, z2 l2 : LL l3 l2, l4 LL</span><br/></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
-                           <p class="yes-index"><span class="notation" id="d34t4777">c3 l3, l3 z2 L z2 l2 L z2 z1 L z2 z1 LL l3, cu_z3</span><br/></p>
                            <p class="yes-index"></p>
-                           <p class="yes-index"><span class="notation" id="d34t4787">f3 z3, l4, z3, l3 L z3, l3 L l3 z2 L z3 L l3 z2 L l2, l2 z1, cul2</span><br/></p>
                            <p class="yes-index"></p>
-                           <p class="yes-index"><span class="notation" id="d34t4797">f3 l2, z3 L z2 L l4 z3, z3 L z3 z2, l3, l3 L l3 z2, z3, l3, cu_l2</span><br/></p>
+                           <p class="yes-index"><span class="notation" id="d35t4777">c3 l3, l3 z2 L z2 l2 L z2 z1 L z2 z1 LL l3, cu_z3</span><br/></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"><span class="notation" id="d35t4787">f3 z3, l4, z3, l3 L z3, l3 L l3 z2 L z3 L l3 z2 L l2, l2 z1, cul2</span><br/></p>
+                           <p class="yes-index"></p>
+                           <p class="yes-index"><span class="notation" id="d35t4797">f3 l2, z3 L z2 L l4 z3, z3 L z3 z2, l3, l3 L l3 z2, z3, l3, cu_l2</span><br/></p>
                            <p class="yes-index"></p><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_41/files/images/A-Gf_A67_41-001v/full/full/0/default.jpg" n="3" style="--page_before: '2'; --beginning_page: '3';"></span><span class="pb_marker" n="3"></span><p class="yes-index"></p>
                            <p class="yes-index"></p>
                            <p class="yes-index"></p>
