--- a/toc.html
+++ b/toc.html
@@ -1238,24 +1238,26 @@
                      <td>In progress</td>
                   </tr>
                   <tr>
-                     <td><a href="S1_76.html">A 64/34 (Alleluia, felix es sacra Virgo)</a></td>
+                     <td><a href="S1_76.html">A 67/22 (Asperges me Domine)</a></td>
                      <td><a href="S1_76.xml">S1_76.xml</a></td>
-                     <td>1425</td>
                      <td>1450</td>
+                     <td>1500</td>
                      <td>
-                        OFM
+                        OSC
                         </td>
                      <td>
                         Graduale
+                        , 
+                        Teil
                         </td>
-                     <td><a href="MariaLankowitz.html">Maria Lankowitz</a></td>
+                     <td><a href="Muenchen.html">München?</a>, <a href="Graz.html">Graz</a></td>
                      <td>[Handschrift]</td>
-                     <td>185</td>
-                     <td>420</td>
-                     <td>310</td>
+                     <td>136</td>
+                     <td>210</td>
+                     <td>160</td>
                      <td>
-                        Temporale, Sanctorale, Marienmessen, Kyriale, Sequenzen
-                        Graduale
+                        
+                        Graduale, Teil 4
                         </td>
                      <td>In progress</td>
                   </tr>
