--- a/A67_44.html
+++ b/A67_44.html
@@ -66,15 +66,13 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="A67_23.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="A64_40.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">A 67/44 (In processionibus Fraternitatis S. P. N. Francisci)</h1>
                      <h3 align="center"><a href="A67_44.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                   </div>
-                  <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
-                     <h1><a href="S1_64.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
-                  </div>
+                  <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right"></div>
                </div>
                <div id="container-resize" class="row transcript active">
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index nothingtoseehere"></div>
