--- a/S1_40.html
+++ b/S1_40.html
@@ -66,14 +66,14 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
-                     <h1><a href="S1_25.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
+                     <h1><a href="A67_21.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
                      <h1 align="center">S 1/40 (O admirabile commercium)</h1>
                      <h3 align="center"><a href="S1_40.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
-                     <h1><a href="A64_43.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
+                     <h1><a href="A67_20.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
